--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* You're welcome to change any of this! */
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -6,7 +7,7 @@
 body {
     background-color: #00FFFF;
     margin: 0px;
-    font-family: Arial, sans-serif;
+    font-family: Audiowide, cursive;
 }
 
 p, a, li {
