--- a/lectures/lecture08/03-twelve-column-grid/style.css
+++ b/lectures/lecture08/03-twelve-column-grid/style.css
@@ -17,6 +17,18 @@ body {
   margin: 0 auto;
   max-width: 1000px;
 }
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  min-height: 100vh;
+  column-gap: 10px;
+}
+.item-1 {
+  grid-column: 2 / 6;
+}
+.item-2 {
+  grid-column: 6 / 12;
+}
 
 .item {
   padding: 8px;
@@ -24,9 +36,13 @@ body {
   border: 4px solid tomato;
   border-radius: 6px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-  height: 50vh;
+  
 }
-
+@media screen and (max-width:450px) {
+  .container-grid {
+    display: block;
+  }
+}
 
 /* Task 2 */
 
