--- a/lectures/lecture08/04-responsive-layout-grid/style.css
+++ b/lectures/lecture08/04-responsive-layout-grid/style.css
@@ -25,39 +25,22 @@ body {
   border-radius: 6px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
-
-.height-50 {
-  height: 50vh;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: repeat(4,auto);
+  column-gap: 10px;
+  row-gap: 10px;
 }
-
-/* Task 3 */
-
-.task-3.container {
+.header {
+grid-row: 1 / 2;
+grid-column: 1 / 4;
 }
-
-.task-3 .header {
+.sidebar {
+  grid-row: 2 / 4;
+  grid-column: 1 / 2;
 }
-
-.task-3 .navigation {
-}
-
-.task-3 .ads {
-}
-
-.task-3 .sidebar {
-}
-
-.task-3 .main {
-}
-
-.task-3 .footer {
-}
-
-
-
-@media (max-width: 1020px) {
-}
-
-
-@media (max-width: 720px) {
+.main {
+grid-column: 2 / 3;
+grid-row: 2 / 4;
 }
