--- a/homework/hw04/07-responsive-layout-grid/style.css
+++ b/homework/hw04/07-responsive-layout-grid/style.css
@@ -24,6 +24,7 @@ body {
   border: 4px solid tomato;
   border-radius: 6px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+  
 }
 
 .height-50 {
@@ -31,33 +32,98 @@ body {
 }
 
 /* Task 3 */
-
-.task-3.container {
+.container {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: repeat(4,auto);
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
-.task-3 .header {
+.header {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
 }
 
-.task-3 .navigation {
+ .navigation {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  
+ 
 }
 
-.task-3 .ads {
+ .ads {
+  grid-row: 2 / 4;
+  grid-column: 3 / 4;
 }
 
-.task-3 .sidebar {
+ .sidebar {
+  grid-row: 2 / 4;
+  grid-column: 1 / 2;
+ 
+
+  
 }
 
-.task-3 .main {
+ .main {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  min-height: 70vh;
+
 }
 
-.task-3 .footer {
+.footer {
+  grid-row: 4 / 5;
+  grid-column: 1 / 4;
 }
 
 
 
 @media (max-width: 1020px) {
+  .container {
+  
+    grid-template-columns: 1fr 2fr;
+
+    
+  }
+  .header {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+  }
+  .main {
+grid-row: 3 / 4;
+grid-column: 1 / 2;
+  }
+  .footer {
+    grid-row: 4 / 5;
+    grid-column: 1 / 2;
+  }
 }
 
 
 @media (max-width: 720px) {
+  .container {
+  
+    grid-template-columns: 1fr;
+
+    
+  }
+  .header{
+    grid-row: 1 / 2;
+  }
+  .navigation{
+    grid-row: 3 / 4;
+  }
+  .ads{
+    grid-row: 5 / 6;
+  }
+  .sidebar{
+    grid-row: 7 / 8;
+  }
+  .main{
+    grid-row: 9 / 10;
+  }
+  .footer {
+    grid-row: 11 / 12;
+  }
 }
