--- a/homework/final/style.css
+++ b/homework/final/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap');
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightgray;
+    font-family: 'Darumadrop One', cursive;
 }
 main {
     display: grid;
@@ -31,5 +33,25 @@ color: orange;
 text-decoration: none;
 }
 #duck {
+    display: block;
     width:25%;
+   margin-left: auto;
+   margin-right: auto;
+
+}
+h1 {
+    display: flex;
+    justify-content: center;
+}
+p {
+    display: flex;
+    justify-content: center;
+}
+footer {
+    display: flex;
+    justify-content: center;
+}
+#contact {
+    display: grid;
+    grid-template-columns: 1fr;
 }
